infra/kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
      #   volumeMounts:
      #     - mountPath: /var/lib/postgresql
      #       name: postgres-data
      # volumes:
      #   - name: postgres-data
      #     persistentVolumeClaim: 
      #       claimName: postgres-claim
