infra/kubernetes/auction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-svc
spec:
  selector:
    matchLabels:
      app: auction-svc
  template:
    metadata:
      labels:
        app: auction-svc
    spec:
      containers:
      - name: auction-svc
        image: bardiyabasafa/carsties-auction-api
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: web
        - containerPort: 8001
          name: grpc 

---

apiVersion: v1
kind: Service
metadata:
  name: auction-clusterip
spec:
  type: ClusterIP
  selector:
    app: auction-svc
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  

---

apiVersion: v1
kind: Service
metadata:
  name: auction-clusterip-grpc
spec:
  type: ClusterIP
  selector:
    app: auction-svc
  ports:
  - port: 8001
    targetPort: 8001
    name: grpc
