infra/kubernetes/bids-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bids-svc
spec:
  selector:
    matchLabels:
      app: bids-svc
  template:
    metadata:
      labels:
        app: bids-svc
    spec:
      containers:
        - name: bids-svc
          image: bardiyabasafa/carsties-bids-api
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: bids-clusterip
spec:
  selector:
    app: bids-svc
  ports:
  - port: 8080
    targetPort: 8080
