infra/kubernetes/identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-server
spec:
  selector:
    matchLabels:
      app: identity-server
  template:
    metadata:
      labels:
        app: identity-server
    spec:
      containers:
        - name: identity-server
          image: bardiyabasafa/carsties-identity-server
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: identity-clusterip
spec:
  selector:
    app: identity-server
  ports:
    - port: 8080
      targetPort: 8080
