infra/kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-clusterip
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo-port
