infra/kubernetes/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-svc
spec:
  selector:
    matchLabels:
      app: notification-svc
  template:
    metadata:
      labels:
        app: notification-svc
    spec:
      containers:
      - name: notification-svc
        image: bardiyabasafa/carsties-notification-hub
        imagePullPolicy: Never
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: notification-clusterip
spec:
  selector:
    app: notification-svc
  ports:
  - port: 8080
    targetPort: 8080
