infra/kubernetes/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-svc
spec:
  selector:
    matchLabels:
      app: search-svc
  template:
    metadata:
      labels:
        app: search-svc
    spec:
      containers:
        - name: search-svc
          image: bardiyabasafa/carsties-search-api
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: web

---
apiVersion: v1
kind: Service
metadata:
  name: search-clusterip
spec:
  type: ClusterIP
  selector:
    app: search-svc
  ports:
    - port: 8080
      targetPort: 8080
