infra/kubernetes/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: bardiyabasafa/carsties-webapp
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/public
              name: webapp-uploads
      volumes:
        - name: webapp-node
          persistentVolumeClaim:
            claimName: webapp-claim
        - name: webapp-uploads
          persistentVolumeClaim:
            claimName: webapp-uploads-claim

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip
spec:
  selector:
    app: webapp
  ports:
    - port: 3000
      targetPort: 3000
